# scikit_build_core_tmp_install_issue_minimal_example

./: CMakeLists.txt  main.fpp  pyproject.toml
